--- a/lesson02/index.html
+++ b/lesson02/index.html
@@ -9,6 +9,29 @@
 </head>
 <body>
     <h1>hello world</h1>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="bg-primary text-white p-3">
+                    Columns
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="bg-primary text-white p-3">
+                    Columns
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="bg-primary text-white p-3">
+                    Columns
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js
 "></script>
