--- a/lesson04/index.html
+++ b/lesson04/index.html
@@ -10,34 +10,39 @@
 <body>
     <h1>hello world</h1>
 
-   <div class="container">
+    <div class="container">
         <div class="row">
-            <div class="col-md-3 col-sm-4 col-lg-5">
-                <div class="bg-primary p-3 text-white text-center mb-3">
-                    Column
+            <div class="col-md-12">
+                <div class="bg-primary p-3 text-white mb-3">
+                    1st Row Column
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="bg-primary p-3 text-white mb-3">
+                            Nest Row, Column
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="bg-primary p-3 text-white mb-3">
+                            Nest Row, Column
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="bg-primary p-3 text-white mb-3">
+                            Nest Row, Column
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="bg-primary p-3 text-white mb-3">
+                            Nest Row, Column
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-3 col-sm-4 col-lg-5">
-                <div class="bg-primary p-3 text-white text-center mb-3">
-                    Column
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-4 col-lg-5">
-                <div class="bg-primary p-3 text-white text-center mb-3">
-                    Column
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-4 col-lg-5">
-                <div class="bg-primary p-3 text-white text-center mb-3">
-                    Column
-                </div>
-            </div>
-
         </div>
-   </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js
-"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
