--- a/lesson18/index.html
+++ b/lesson18/index.html
@@ -8,30 +8,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>hello world</h1>
-
-    <div class="container">
+    <div class="container mt-5">
         <div class="row">
-            <div class="col">
-                <div class="bg-primary text-white p-3">
-                    Columns
-                </div>
-            </div>
+            <div class="col-md-12s">
+                <img style="width: 300px;" class="img-fluid rounded float-start" src="https://cdn.pixabay.com/photo/2023/04/11/03/50/space-marine-7915662_1280.jpg" alt="ultramarine">
+                <img style="width: 300px;" class="img-fluid rounded float-end" src="https://cdn.pixabay.com/photo/2023/04/11/03/50/space-marine-7915662_1280.jpg" alt="ultramarine">
+                <img style="width: 300px;" class="img-fluid rounded mx-auto d-block" src="https://cdn.pixabay.com/photo/2023/04/11/03/50/space-marine-7915662_1280.jpg" alt="ultramarine">
 
-            <div class="col">
-                <div class="bg-primary text-white p-3">
-                    Columns
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="bg-primary text-white p-3">
-                    Columns
-                </div>
             </div>
         </div>
     </div>
 
+   
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
