--- a/lesson24/index.html
+++ b/lesson24/index.html
@@ -8,29 +8,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>hello world</h1>
+    <form action="">
+        <div class="mb-3">
+            <label for="datalist" class="form-label">Datalist</label>
+            <input list="datalistOption" class="form-control" id="datalist" placeholder="Type to search...">
+            <datalist id="datalistOption">
+                <option value="San Francisco"></option>
+                <option value="New York"></option>
+                <option value="Seattle"></option>
+                <option value="Los Angeles"></option>
+                <option value="Chicago"></option>
 
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="bg-primary text-white p-3">
-                    Columns
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="bg-primary text-white p-3">
-                    Columns
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="bg-primary text-white p-3">
-                    Columns
-                </div>
-            </div>
+            </datalist>
         </div>
-    </div>
+    </form>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
