--- a/lesson27/index.html
+++ b/lesson27/index.html
@@ -8,7 +8,26 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-   
+   <div class="col-md-6">
+    <form action="">
+       <div class="mb-3">
+            <label class="form-label" for="custom_range">Range</label>
+            <input class="form-range" type="range" name="" id="custom_range">
+       </div>
+       <div class="mb-3">
+            <label class="form-label" for="custom_range">Range Disabled</label>
+            <input class="form-range" type="range" name="" id="custom_range" disabled>
+       </div>
+       <div class="mb-3">
+            <label class="form-label" for="custom_range">Range </label>
+            <input class="form-range" type="range" name="" id="custom_range" min="0" max="5">
+       </div>
+       <div class="mb-3">
+            <label class="form-label" for="custom_range">Range </label>
+            <input class="form-range" type="range" name="" id="custom_range" min="0" max="5" step="0.5">
+       </div>
+    </form>
+   </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
